<resources>
    <string name="app_name">FAC19</string>
    <string name="fac19">FAC19</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up_here">Sign up here.</string>
    <string name="full_name">Full Name</string>
    <string name="surname">Surname</string>
    <string name="first_name">First Name</string>
    <string name="middle_initial">Middle Initial</string>
    <string name="registration"> Account Registration</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="register">Register</string>
    <string name="email">Email Address</string>
    <string name="current_address">Current Address</string>
    <string name="contact_number">Contact Number (+63)</string>
    <string name="your_info">Your Information</string>
    <string name="num_contacts"># of contacts</string>
    <string name="num_location">locations tracked</string>
    <string name="edit">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="logout">LOGOUT</string>
    <string name="edit_info">Edit Information</string>
    <string name="test_here">Test here</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_dashboard">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="telephone_hotline">Telephone: (074) 442-1900, (074) 442-1905, (074) 661-1455</string>
    <string name="cellular_hotline">Cellular: Globe - (0927) 628 0498, Smart - (0999) 678 4335 </string>
    <string name="covid19_web">Website: endcov19.baguio.gov.ph</string>
    <string name="tos_link">https://www.termsofservicegenerator.net/live.php?token=Bjivi5z9CW44D9QW9ltkCa0rPfGSUnXB</string>
    <string name="pp_link">https://www.privacypolicygenerator.info/live.php?token=PTh0EFU6RM2nIAJQlEtZ0PsxKFRW2Sn4</string>

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location Unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>

    <string name="start_location_updates_button_text">Start receiving location updates</string>
    <string name="stop_location_updates_button_text">Stop receiving location updates</string>
    <string name="contact_tracing">Contact Tracing</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="location">Location:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="sdmascto">SDMASCTO</string>
    <string name="location_services">Location Services</string>
    <string name="location_tracking">Location Tracking</string>


    <string name="location_updated">Location Updated: %1$s</string>
    <string name="agreement_1">By tapping register, you are agreeing to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="privacy_policy_no_dot">Privacy Policy</string>
    <string name="and">and</string>

    <string name="preference_file_key">com.uccpe.fac19.PREFERENCE_FILE_KEY</string>
    <string name="no_location_text">No current location</string>


</resources>